# XTYF-2026-Rifle

./: .cproject  .mxproject  .project  .stm32env  CMakeLists.txt  COD_H7_Template.ioc  README.md  STM32H723VGTX_FLASH.ld  stm32h7_stlink.cfg
Application/Task/Inc/: Control_Task.h  INS_Task.h
Application/Task/Src/: CAN_Task.c  Control_Task.c  Detect_Task.c  INS_Task.c
BSP/Src/: bsp_can.c  bsp_uart.c
COD_H7_Template/: CMakeLists.txt
COD_H7_Template/cmake/stm32cubemx/: CMakeLists.txt
Components/Controller/Inc/: LQR.h
Components/Controller/Src/: LQR.c
Components/Device/Inc/: AK_motor.h  Motor.h
Components/Device/Src/: AK_motor.c  Motor.c
Core/Inc/: FreeRTOSConfig.h
Core/Src/: gpio.c  main.c  stm32h7xx_it.c
SystemView/Config/: SEGGER_SYSVIEW_Conf.c
SystemView/SEGGER/: SEGGER_SYSVIEW.h
cmake/stm32cubemx/: CMakeLists.txt
